 - Fixed strange effects tooltip in event IMF Demands Land Reform
 - Fixed missing artillety technology for Liechtenstein
 - Fixed decision to reduce autonomy don't disappear if you lost puppet
 - Fixed prerequisites in decision Replace Saudi Arabia as Leader of the GCC
 - Kuwait now don't should have completed focuses in 2000

Focus Tree:
 - Tweaks to the American Focus Tree

GUI:
 - Better position for things in topbar
 - Fixed the Ship Filters section in the naval production screen

 Performance:
 - Optimized on_startup on action so the game should load in faster

 Quality of Life (QoL):
 - Added Project Count to International Investments Tooltip

v1.7.1 - Hotfix & BBA Compatibility

AI:
 - Azerbaijani AI should no longer suicide into Iran
 - Armenia should be more chummy with Russia
 - Danish AI should be more chummy with Scandinavian nations
 - Improved French Francosphere AI
 - Ukrainian AI if it has a wargoal shouldn't suicide against Russia
 - Russian AI now must choose Putin with historical/United Russia path
 - Tweaked the Rejection AI for Economic Aid (Opinion matters)
 - AI should be less likely to go jihadist as the Gulf Nations
 - AI will no longer get submarine/ship defense companies if it has no dockyards
 - Economic Aid AI should now be more relative to opinions vs scripted hard triggers
 - Investment AI should now fall more on opinion and scripted some specific cases where they would be more likely to reject
 - Restructured Russian AI for initial election to make Putin the only choice (only can be changed via game rule if you are on historical focus AI)
 - AI will now use PMCs
 - Improved the North Korean focus AI to focus more on reducing the Arduous March
 - AI peace deals should result in annexation of cores and puppeting of the rest of the conquered land
 - AI peace deals should see war winners seek to keep puppets close to their border if possible