@@ -853,15 +853,15 @@ south_china_sea_category = {
 			}
 		}
 		custom_cost_trigger = {
-			check_variable = { treasury > 2.4 }
+			check_variable = { treasury > 3.74 }
 		}
 
-		custom_cost_text = cost_2_5
+		custom_cost_text = cost_3_75
 
 		days_remove = 90
 
 		remove_effect = {
-			set_temp_variable = { treasury_change = -2.5 }
+			set_temp_variable = { treasury_change = -3.75 }
 			modify_treasury_effect = yes
 			if = {
 				limit = { NOT = { has_country_flag = paracel_deal original_tag = VIE } }
@@ -925,15 +925,15 @@ south_china_sea_category = {
 		}
 
 		custom_cost_trigger = {
-			check_variable = { treasury > 2.4 }
+			check_variable = { treasury > 3.74 }
 		}
 
-		custom_cost_text = cost_2_5
+		custom_cost_text = cost_3_75
 
 		days_remove = 90
 
 		remove_effect = {
-			set_temp_variable = { treasury_change = -2.5 }
+			set_temp_variable = { treasury_change = -3.75 }
 			modify_treasury_effect = yes
 			if = {
 				limit = {
@@ -1328,15 +1328,15 @@ south_china_sea_category = {
 			}
 		}
 		custom_cost_trigger = {
-			check_variable = { treasury > 2.4 }
+			check_variable = { treasury > 3.74 }
 		}
 
-		custom_cost_text = cost_2_5
+		custom_cost_text = cost_3_75
 
 		days_remove = 90
 
 		remove_effect = {
-			set_temp_variable = { treasury_change = -2.5 }
+			set_temp_variable = { treasury_change = -3.75 }
 			modify_treasury_effect = yes
 			if = {
 				limit = {
@@ -1731,15 +1731,15 @@ south_china_sea_category = {
 			}
 		}
 		custom_cost_trigger = {
-			check_variable = { treasury > 2.4 }
+			check_variable = { treasury > 3.74 }
 		}
 
-		custom_cost_text = cost_2_5
+		custom_cost_text = cost_3_75
 
 		days_remove = 90
 
 		remove_effect = {
-			set_temp_variable = { treasury_change = -2.5 }
+			set_temp_variable = { treasury_change = -3.75 }
 			modify_treasury_effect = yes
 			if = {
 				limit = {
@@ -2135,15 +2135,15 @@ south_china_sea_category = {
 		}
 
 		custom_cost_trigger = {
-			check_variable = { treasury > 2.4 }
+			check_variable = { treasury > 3.74 }
 		}
 
-		custom_cost_text = cost_2_5
+		custom_cost_text = cost_3_75
 
 		days_remove = 90
 
 		remove_effect = {
-			set_temp_variable = { treasury_change = -2.5 }
+			set_temp_variable = { treasury_change = -3.75 }
 			modify_treasury_effect = yes
 			if = {
 				limit = {
@@ -3282,10 +3282,10 @@ one_china_category = {
 		}
 
 		custom_cost_trigger = {
-			check_variable = { treasury > 0.49 }
+			check_variable = { treasury > 1.49 }
 		}
 
-		custom_cost_text = cost_0_5
+		custom_cost_text = cost_1_5
 
 		available = {
 		}
@@ -3301,7 +3301,7 @@ one_china_category = {
 		}
 
 		complete_effect = {
-			set_temp_variable = { treasury_change = -0.5 }
+			set_temp_variable = { treasury_change = -1.5 }
 			modify_treasury_effect = yes
 			log = "[GetDateText]: [This.GetName]: decision anti_DPP_media_campaign executed"
 		}
@@ -3345,10 +3345,10 @@ one_china_category = {
 		}
 
 		custom_cost_trigger = {
-			check_variable = { treasury > 0.49 }
+			check_variable = { treasury > 1.49 }
 		}
 
-		custom_cost_text = cost_0_5
+		custom_cost_text = cost_1_5
 
 		available = {
 		}
@@ -3364,7 +3364,7 @@ one_china_category = {
 		}
 
 		complete_effect = {
-			set_temp_variable = { treasury_change = -0.5 }
+			set_temp_variable = { treasury_change = -1.5 }
 			modify_treasury_effect = yes
 			log = "[GetDateText]: [This.GetName]: decision anti_DPP_media_campaign executed"
 		}
@@ -3372,10 +3372,10 @@ one_china_category = {
 		remove_effect = {
 			TAI = {
 				set_temp_variable = { party_index = 1 }
-				set_temp_variable = { party_popularity_increase = 0.02 }
+				set_temp_variable = { party_popularity_increase = 0.025 }
 				add_relative_party_popularity = yes
 				set_temp_variable = { party_index = 2 }
-				set_temp_variable = { party_popularity_increase = -0.02 }
+				set_temp_variable = { party_popularity_increase = -0.025 }
 				add_relative_party_popularity = yes
 			}
 		}
@@ -3401,11 +3401,11 @@ one_china_category = {
 
 		visible = {
 			original_tag = CHI
-			TAI = {
-				is_puppet = no
-			}
 			NOT = {
-				TAI = { has_idea = china_travel_ban }
+				TAI = { 
+					is_puppet = yes
+					has_idea = china_travel_ban
+				}
 			}
 		}
 
@@ -3450,8 +3450,8 @@ one_china_category = {
 			original_tag = CHI
 			TAI = {
 				is_puppet = no
+				has_idea = china_travel_ban 
 			}
-			TAI = { has_idea = china_travel_ban }
 		}
 
 		cost = 50
