@@ -431,6 +431,11 @@ influence_desicions = {
 		}
 
 		visible = {
+			NOT = {
+				FROM = {
+					is_subject_of = CHI
+				}
+			}
 			FROM = {
 				is_subject_of = ROOT
 			}
