@@ -455,6 +455,7 @@ ideas = {
 				consumer_goods_factor = 0.05
 				production_speed_buildings_factor = -0.1
 				research_speed_factor = -0.1
+				custom_modifier_tooltip = china_travel_ban_tt
 			}
 		}
 
