@@ -44,8 +44,10 @@ ideas = {
 			picture = tiger_economy
 			on_add = { log = "[GetDateText]: [Root.GetName]: add idea asian_tigers_legacy" }
 			modifier = {
-				production_speed_buildings_factor = 0.07
+				production_speed_buildings_factor = 0.075
 				trade_opinion_factor = 0.05
+				consumer_goods_factor = -0.025
+				tax_gain_multiplier_modifier = 0.05
 			}
 		}
 		asian_crisis = {
