@@ -1660,6 +1660,10 @@ calculate_additional_expense_rate = {
 
 		add_to_variable = { additional_expenses_rate = project_decisions_cost }
 	}
+	if = {
+		limit = { has_idea = china_travel_ban }
+		add_to_variable = { additional_expenses_rate = 0.5 }
+	}
 	# European Union Contribution Expenses
 	if = { limit = { has_idea = EU_member }
 		add_to_variable = { additional_expenses_rate = EU_budget_contribution_weekly }
