@@ -1859,6 +1859,17 @@ defined_text = {
 	}
 }
 
+defined_text = {
+	name = china_travel_ban_expenses
+	text = {
+		trigger = { has_idea = china_travel_ban }
+		localization_key = china_travel_ban_additional_expenses
+	}
+	text = {
+		localization_key = ""
+	}
+}
+
 # Project
 defined_text = {
 	name = LeaseCivilianFactoriesGlowTexture
