@@ -2758,9 +2758,7 @@ country_event = {
 					add_extra_state_shared_building_slots = -2
 				}
 				else = {
-					random_owned_state = {
-						add_extra_state_shared_building_slots = -1
-					}
+					add_extra_state_shared_building_slots = -1
 				}
 			}
 		}
