@@ -1369,6 +1369,10 @@
  cost_3_5_blocked: "£treasury §R3.5§!"
  cost_3_5_tooltip: "This purchase will cost 3.5 §Hbillions§!"
 
+ cost_3_75: "£treasury 3.75"
+ cost_3_75_blocked: "£treasury §R3.75§!"
+ cost_3_75_tooltip: "This purchase will cost 3.75 §Hbillions§!"
+
  cost_3_8: "£treasury 3.8"
  cost_3_8_blocked: "£treasury §R3.8§!"
  cost_3_8_tooltip: "This purchase will cost 3.8 §Hbillions§!"
