@@ -114,7 +114,6 @@
  ##MENA Spirits
  al_jazeera: "Al-Jazeera Headquarters"
  al_jazeera_desc: "Al-Jazeera, by far the largest and most influential news network in the Arab World, is the gem of Qatari soft power. It has come to be synonymous with the autonomous foreign policy that Qatar has pursued since Hamad bin Khalifa al Thani seized power in 1995."
- al_jazeera_idea_TT: "Additional Expenses: $§R0.020§!"
  al_jazeera_allowed: "Al-Jazeera"
  al_jazeera_allowed_desc: "Al-Jazeera, by far the largest and most influential news network in the Arabic World, is the gem of Qatari soft power around the globe."
  al_jazeera_banned: "Al-Jazeera Banned"
