@@ -96,7 +96,7 @@
  DEBT_RATE: "$$§R[?debt_rate|-3]§!"
  ADDITIONAL_EXPENSES: "§HAdditional Expenses:§!"
  ADDITIONAL_EXPENSES_RATE: "$$§R[?additional_expenses_rate|-3]§!"
- ADDITIONAL_EXPENSES_TOOLTIP: "Additional Expenses:\n[additional_expenses_canada_subsidy][display_military_leasing_costs][display_civilian_leasing_costs][display_naval_leasing_costs][additional_expense_summary_syria_agricultural_subsidies][display_industrial_projects_costs][display_infrastructure_projects_costs][display_arms_factory_projects_costs][service_constructions_projects_costs][display_dockyard_projects_costs][western_propaganda_campaign_costs][emerging_propaganda_campaign_costs][nonaligned_propaganda_campaign_costs][nationalists_propaganda_campaign_costs][salafist_propaganda_campaign_costs][propaganda_campaign_decision_costs][additional_expense_summary_occupation_of_lebanon][additional_expense_summary_al_jazeera][additional_expense_summary_EU_contribution][additional_expense_summary_BOT_coal_focused_energy][additional_expense_summary_BOT_renewable_focused_energy][additional_expense_summary_LIC_foreign_workers][additional_expense_large_company_subsidies][additional_expense_farmer_subsidies][ITA_additional_expense_display][additional_expense_pmc_salary]"
+ ADDITIONAL_EXPENSES_TOOLTIP: "Additional Expenses:\n[additional_expenses_canada_subsidy][display_military_leasing_costs][display_civilian_leasing_costs][display_naval_leasing_costs][additional_expense_summary_syria_agricultural_subsidies][display_industrial_projects_costs][display_infrastructure_projects_costs][display_arms_factory_projects_costs][service_constructions_projects_costs][display_dockyard_projects_costs][western_propaganda_campaign_costs][emerging_propaganda_campaign_costs][nonaligned_propaganda_campaign_costs][nationalists_propaganda_campaign_costs][salafist_propaganda_campaign_costs][propaganda_campaign_decision_costs][additional_expense_summary_occupation_of_lebanon][additional_expense_summary_al_jazeera][additional_expense_summary_EU_contribution][additional_expense_summary_BOT_coal_focused_energy][additional_expense_summary_BOT_renewable_focused_energy][additional_expense_summary_LIC_foreign_workers][additional_expense_large_company_subsidies][additional_expense_farmer_subsidies][ITA_additional_expense_display][additional_expense_pmc_salary][china_travel_ban_expenses]"
  ADDITIONAL_EXPENSES_TOOLTIP_DELAYED: "Additional Expenses are various running costs that our government has that don't fit in other expenses. These includes costs from running decisions for example."
  TOTAL_EXPENDITURE: "Total Expenditure:"
  TOTAL_EXPENDITURE_RATE: "$$§R[?display_expense]§!"
@@ -105,6 +105,11 @@
  GROSS_INCOME_RATE: "$$§G[?display_income]§!"
  POPULATION_TAX_RATE: "Population Tax Rate"
  CORPORATE_TAX_RATE: "Corporate Tax Rate"
+
+ china_travel_ban_additional_expenses: "$$0.500 from §Y$china_travel_ban$§!\n"
+
+ al_jazeera_idea_TT: "Additional Expenses: $§R0.020§!"
+ china_travel_ban_tt: "Additional Expenses: $§R0.500§!"
 
  # Increase / Decrease Tax Rate Tooltips
  increases_population_tax_tooltip: "This button increases the §YPopulation Tax Rate§! in our nation.\n\n§YPrerequisites:§!\n[tax_button_req]\n\n[allowed_to_adjust_personal_tax_laws]"
