@@ -21,6 +21,14 @@ Bugfixes:
  - Fixed decision to reduce autonomy don't disappear if you lost puppet
  - Fixed prerequisites in decision Replace Saudi Arabia as Leader of the GCC
  - Kuwait now don't should have completed focuses in 2000
+ - Fixed decision for China to reduce autonomy in Hong Kong
+
+Content:
+ - Increased cost to drill oil for China
+ - Increased cost to make anti DPP campaign
+ - Chinese Tourism Restricted idea now also should add additional expenses
+ - Buffed idea The Four Asian Tiggers Legacy
+ - Various changes for GCC focus tree
 
 Focus Tree:
  - Tweaks to the American Focus Tree
@@ -29,10 +37,10 @@ GUI:
  - Better position for things in topbar
  - Fixed the Ship Filters section in the naval production screen
 
- Performance:
+Performance:
  - Optimized on_startup on action so the game should load in faster
 
- Quality of Life (QoL):
+Quality of Life (QoL):
  - Added Project Count to International Investments Tooltip
 
 v1.7.1 - Hotfix & BBA Compatibility
